# LofiPlayer

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
icons/: icon.icns
src/: main.rs
